// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blacklisted syntax 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"function* f() { yield 1; } f();\\"), undefined, 2);",
  "displayResult": undefined,
  "error": "Line 1: ParseError: Yield expressions are not allowed",
  "visualiseListResult": undefined,
}
`;

exports[`Blatant syntax error 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"'\\"), undefined, 2);",
  "displayResult": undefined,
  "error": "Line 1: ParseError: SyntaxError: Unterminated string constant (1:0)",
  "visualiseListResult": undefined,
}
`;

exports[`Syntax rules 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"x = y = x;\\"), undefined, 2);",
  "displayResult": undefined,
  "error": "Line 1: ParseError: Assignment inside an expression is not allowed. Only assignment in a statement is allowed.",
  "visualiseListResult": undefined,
}
`;
